--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -44,6 +44,7 @@
         width: 80vw ;
         height: 15vh;
         flex-direction: column;
+        justify-content: space-evenly;
     }
     #email1{
         width: 50vw;
